# ComfyUI-JH-PixelPro

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  __init__.py  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
core/: __init__.py  blend_modes.py  color_lab.py  color_matcher.py  detail_masker.py  face_detect.py  face_pipeline.py  facial_aligner.py  frequency.py  lens_distortion.py  luminosity.py  lut.py  lut_preset.py  mask_alpha_matte.py  mask_combine.py  mask_edge_refine.py  mask_edge_smooth.py  mask_morphology.py  mask_refiner.py  mask_trimap.py  selective_color.py  skin_tone_region.py  smoother.py  tone_curve.py  tone_match.py  unwrap_face.py
docs/: index.md  quickstart.md  smoke-test-matrix.md
examples/: index.html
nodes/: __init__.py  color_lab.py  color_matcher_node.py  color_matcher_region_node.py  detail_masker_node.py  face_beauty_blend_node.py  face_detect_node.py  face_landmarks_node.py  face_warp_node.py  facial_aligner_node.py  frequency_node.py  hald_identity_node.py  hue_saturation_range_node.py  layer_compositing.py  lens_distortion_node.py  look_base.py  look_select.py  looks.py  luminosity_node.py  lut_export_node.py  lut_import_node.py  lut_preset_node.py  mask_alpha_matte_node.py  mask_combine_node.py  mask_edge_refine_node.py  mask_edge_smooth_node.py  mask_morphology_node.py  mask_refiner_node.py  mask_trimap_node.py  saturation_mask_node.py  skin_tone_region_node.py  smoother_node.py  tone_curve_node.py  tone_match_lut_node.py  unwrap_face_node.py
(+242 files in other folders)
