[project]
name = "comfyui-jh-pixelpro"
version = "0.1.0-dev"
description = "GPU-powered pro-grade image suite for ComfyUI (Kornia core)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "JH" }]
dependencies = [
    "kornia>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
