[project]
name = "comfyui-jh-pixelpro"
version = "0.8.0"
description = "GPU-powered pro-grade image suite for ComfyUI (Kornia core)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "JH" }]
dependencies = [
    "kornia>=0.7.0",
    "mediapipe>=0.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# ``--import-mode=importlib`` avoids pytest walking up into the hyphenated
# pack-root ``__init__.py`` during test collection (which would fail because
# ``ComfyUI-JH-PixelPro`` is not a valid Python module name).
addopts = "-ra --strict-markers --import-mode=importlib"
pythonpath = ["."]
